fix issue with gap at top due to fixed nav bar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,4 +22,9 @@ html {
     background-attachment: fixed;
     background-position: center;
   }
+
+  .topMargin {
+
+    margin-top: 100px ;
+  }
   
